--- a/app/views/shared/_billing_banner.html.erb
+++ b/app/views/shared/_billing_banner.html.erb
@@ -2,6 +2,10 @@
   <% account = current_user.account %>
   <% suppress_once = session[:suppress_billing_banner] == true %>
   <%
+    # Valid plans that don't need generic "choose a plan" warning
+    valid_plans = ["free", "team", "business"]
+    has_chosen_plan = valid_plans.include?(account.current_plan.to_s.downcase)
+
     # Trial state
     trial_active = account.on_trial?
     trial_days_left =
@@ -9,9 +13,9 @@
         [(account.trial_ends_at.to_date - Date.current).to_i, 0].max
       end
 
-    # Show upgrade banner when trial ended and there is no active subscription
-    # (prompt user to choose Free or subscribe to a paid plan)
-    needs_subscription = !trial_active && !account.active_subscription? && !suppress_once
+    # Show upgrade banner when trial ended, there is no active subscription,
+    # and user hasn't explicitly chosen a plan (free/team/business).
+    needs_subscription = !trial_active && !account.active_subscription? && !has_chosen_plan && !suppress_once
   %>
 
   <% if trial_active %>
