Fix invitation user

--- a/app/views/user_mailer/welcome_and_setup_password.html.erb
+++ b/app/views/user_mailer/welcome_and_setup_password.html.erb
@@ -82,7 +82,7 @@
       </div>
 
       <div class="content">
-        <p>Hello <%= @user.first_name %>,</p>
+        <p>Hello <%= @user.email %>,</p>
 
         <p>Welcome to Active Rabbit AI! Your account has been successfully created and you're ready to get started.</p>
 
@@ -95,7 +95,7 @@
         <div class="info-box">
           <strong>Account Details:</strong><br>
           Email: <%= @user.email %><br>
-          Name: <%= @user.first_name %> <%= @user.last_name %>
+          Role: <%= @user.role %>
         </div>
 
         <p>Best regards,<br>
