--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,7 +24,7 @@
             <% if user.admin? %>
               <span class="px-2 py-1 text-xs font-medium text-white bg-blue-600 rounded-full">Admin</span>
             <% else %>      
-              <span class="px-2 py-1 text-xs font-medium text-gray-800 bg-gray-200 rounded-full">User</span>
+              <span class="px-2 py-1 text-xs font-medium text-gray-800 bg-gray-200 rounded-full">Manager</span>
             <% end %>
           </div>
         </div>
